--- a/ModRank/views/index.jade
+++ b/ModRank/views/index.jade
@@ -7,7 +7,7 @@ block content
     .col-md-6.col-md-offset-3
         h1.display-4.m-b-2 Mod ID
         // register form
-        form(method='GET' action='/item')
+        form(method='GET' action='/items')
             div.form-group
                 label(for='id') ID: 
                 input#id.form-control(type='text', placeholder='ID' name='id')
