--- a/ModRank/views/layout.jade
+++ b/ModRank/views/layout.jade
@@ -2,9 +2,27 @@ doctype html
 html
   head
     title= title
+    link(rel='stylesheet', href='/vendor/Bootstrap/css/bootstrap.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
-    link(rel='stylesheet', href='/node_modules/bootstrap/dist/css/bootstrap.css')
+    link(rel='icon', href='/images/favicon.jpg')
     
   body
-    .main.container
-        block content
+    header.header
+    
+    .site-wrapper
+      .site-wrapper-inner
+        .cover-container
+          .masthead.clearfix
+            .inner
+              h3.masthead-brand Rimworld ModRank
+              nav
+                ul.nav.masthead-nav
+                  li.active
+                    a(href='#') Home
+          .inner
+            block content
+          .mastfoot
+            .inner
+              p &copy; Nick Fisher 2017
+
+    script(href='/vendor/Bootstrap/js/bootstrap.js')
