--- a/ModRank/views/items.jade
+++ b/ModRank/views/items.jade
@@ -2,7 +2,7 @@ extends layout
 
 block content
   h1= itemTitle + " - " + id
-  img(src=img, alt=itemTitle).img-fluid
+  img(src=img, alt=itemTitle, style='max-width:400px').img-fluid
   hr.bg-white
   ul.list-group
     li.list-group-item.bg-secondary
