--- a/ModRank/views/layout.jade
+++ b/ModRank/views/layout.jade
@@ -11,14 +11,14 @@ html
     .site-wrapper
         .site-wrapper-inner
             .cover-container
-                .masthead.clearfix
-                        .inner
-                            a(href='/')
-                                h3.masthead-brand Rimworld ModRank
-                            nav
-                                ul.nav.masthead-nav
-                                    li
-                                        a(href='/') Home
+                .masthead
+                    .inner
+                        a(href='/')
+                            h3.masthead-brand Rimworld ModRank
+                        nav
+                            ul.nav.masthead-nav
+                                li
+                                    a(href='/') Home
                 .inner.cover
                   block content
                 .mastfoot
