--- a/ModRank/public/stylesheets/style.css
+++ b/ModRank/public/stylesheets/style.css
@@ -49,7 +49,6 @@ body {
 }
 
 .site-wrapper-inner {
-  display: table-cell;
   vertical-align: top;
 }
 
@@ -61,12 +60,16 @@ body {
 /* Padding for spacing */
 .inner {
   padding: 30px;
+  padding-top:0px;
 }
 
 
 /*
  * Header
  */
+.masthead {
+    margin-bottom: 20px;
+}
 .masthead-brand {
   margin-top: 10px;
   margin-bottom: 10px;
@@ -76,6 +79,9 @@ body {
   display: inline-block;
 }
 
+    .masthead-nav > li {
+        margin-left: 50%;
+    }
   .masthead-nav > li + li {
     margin-left: 20px;
   }
@@ -144,16 +150,6 @@ body {
  */
 
 @media (min-width: 768px) {
-  /* Pull out the header and footer */
-  .masthead {
-    position: fixed;
-    top: 0;
-  }
-
-  .mastfoot {
-    position: fixed;
-    bottom: 0;
-  }
   /* Start the vertical centering */
   .site-wrapper-inner {
     vertical-align: middle;
@@ -163,13 +159,5 @@ body {
   .mastfoot,
   .cover-container {
     width: 100%; /* Must be percentage or pixels for horizontal alignment */
-  }
-}
-
-@media (min-width: 992px) {
-  .masthead,
-  .mastfoot,
-  .cover-container {
-    width: 700px;
   }
 }
