- changed wording on comments line

--- a/ModRank/views/items.jade
+++ b/ModRank/views/items.jade
@@ -22,7 +22,7 @@ block content
             .col-md-5
                 h3= "Current Comments: " + comments
             .col-md-5.text-align-right
-                h3= "In the top " + commentsPercent + "% most talked about (#" + commentsRank + ")"
+                h3= "In the top " + commentsPercent + "% most commented on (#" + commentsRank + ")"
     li.list-group-item.bg-danger
         .row
             .col-md-5
