--- a/ModRank/views/layout.jade
+++ b/ModRank/views/layout.jade
@@ -26,3 +26,4 @@ html
                     p &copy; Nick Fisher 2017
 
     script(href='/vendor/Bootstrap/js/bootstrap.js')
+    script(href='/javascripts/JavaScript.js')
