fixed scipts because i'm stupid.

--- a/ModRank/views/layout.jade
+++ b/ModRank/views/layout.jade
@@ -25,5 +25,5 @@ html
                   .inner
                     p &copy; Nick Fisher 2017
 
-    script(href='/vendor/Bootstrap/js/bootstrap.js')
-    script(href='/javascripts/JavaScript.js')
+    script(src='/vendor/Bootstrap/js/bootstrap.js')
+    script(src='/javascripts/JavaScript.js')
