--- a/ModRank/views/items.jade
+++ b/ModRank/views/items.jade
@@ -7,31 +7,41 @@ block content
   ul.list-group
     li.list-group-item.bg-secondary
         .row
-            .col-md-6
+            .col-md-8
                 h3= "Current Subscriptions: " + subs
-            .col-md-6.text-align-right
-                h3= "In the top " + subsPercent + "% most downloaded (#" + subsRank + ")"
+            .col-md-2.text-align-right.border-left
+                h3= "#" + subsRank + ""
+            .col-md-2.border-left
+                h1= "Top " + subsPercent + "%"
     li.list-group-item.bg-primary
         .row
-            .col-md-6
+            .col-md-8
                 h3= "Current Favorites: " + favs
-            .col-md-6.text-align-right
-                h3= "In the top " + favsPercent + "% most liked (#" + favsRank + ")"
+            .col-md-2.text-align-right.border-left
+                h3= "#" + favsRank + ""
+            .col-md-2.border-left
+                h1= "Top " + favsPercent + "%"
     li.list-group-item.bg-success
         .row
-            .col-md-6
+            .col-md-8
                 h3= "Current Comments: " + comments
-            .col-md-6.text-align-right
-                h3= "In the top " + commentsPercent + "% most commented on (#" + commentsRank + ")"
+            .col-md-2.text-align-right.border-left
+                h3= "#" + commentsRank + ""
+            .col-md-2.border-left
+                h1= "Top " + commentsPercent + "%"
     li.list-group-item.bg-danger
         .row
-            .col-md-6
+            .col-md-8
                 h3= "Current Views: " + views
-            .col-md-6.text-align-right
-                h3= "In the top " + viewsPercent + "% most checked out (#" + viewsRank + ")"
+            .col-md-2.text-align-right
+                h3= "#" + viewsRank + ""
+            .col-md-2.border-left
+                h1= "Top " + viewsPercent + "%"
     li.list-group-item.bg-warning
         .row
-            .col-md-6
-                h3= "Total Unsubscriptions: " + unsubscribes
-            .col-md-6.text-align-right
-                h3= "In the top " + unsubscribesPercent + "% most uninstalled (#" + unsubscribesRank + ")"
+            .col-md-8
+                h3= "Current Unsubscriptions: " + unsubscribes
+            .col-md-2.text-align-right
+                h3= "#" + unsubscribesRank + ""
+            .col-md-2.border-left
+                h1= "Top " + unsubscribesPercent + "%"
