--- a/ModRank/views/layout.jade
+++ b/ModRank/views/layout.jade
@@ -25,5 +25,6 @@ html
                   .inner
                     p &copy; Nick Fisher 2017
 
+    script(src='https://code.jquery.com/jquery-3.2.1.min.js')
     script(src='/vendor/Bootstrap/js/bootstrap.js')
     script(src='/javascripts/JavaScript.js')
