--- a/ModRank/views/items.jade
+++ b/ModRank/views/items.jade
@@ -1,8 +1,9 @@
 extends layout
 
 block content
-    h1= itemTitle + " (" + id + ")"
-    img(src=img, alt=itemTitle, style='max-width:400px').img-fluid
+    a(href=("https://steamcommunity.com/sharedfiles/filedetails/?id=" + id))
+        h1= itemTitle + " (" + id + ")"
+        img(src=img, alt=itemTitle, style='max-width:400px').img-fluid
     hr.bg-white
     ul.list-group
         li.list-group-item.bg-secondary
