--- a/ModRank/views/items.jade
+++ b/ModRank/views/items.jade
@@ -3,6 +3,7 @@ extends layout
 block content
     a(href=("https://steamcommunity.com/sharedfiles/filedetails/?id=" + id))
         h1= itemTitle + " (" + id + ")"
+    a(href=("https://steamcommunity.com/sharedfiles/filedetails/?id=" + id))
         img(src=img, alt=itemTitle, style='max-width:400px').img-fluid
     hr.bg-white
     ul.list-group
