- expanded a button to full width

--- a/ModRank/views/index.jade
+++ b/ModRank/views/index.jade
@@ -13,5 +13,5 @@ block content
                     .col-sm-8.nopadding
                         button.btn.btn-primary.rounded-0.rounded-left(type='submit', style='width:100%') Search
                     .col-sm-2.nopadding
-                        a(href='/items?id=random').btn.btn-danger.rounded-0.rounded-right Random
+                        a(href='/items?id=random', style="width:100%").btn.btn-danger.rounded-0.rounded-right Random
             em= 'Search ' + llen + ' total published mods and scenarios!'
