another button resize

--- a/ModRank/views/items.jade
+++ b/ModRank/views/items.jade
@@ -70,4 +70,4 @@ block content
                     .col-sm-8.nopadding
                         button.btn.btn-primary.rounded-0.rounded-left(type='submit', style='width:100%') Go head to head!
                     .col-sm-2.nopadding
-                        a(href='/compare?id1=' + id + '&id2=random').btn.btn-danger.rounded-0.rounded-right Random
+                        a(href='/compare?id1=' + id + '&id2=random', style="width:100%").btn.btn-danger.rounded-0.rounded-right Random
