- renamed items to item for simplicity

--- a/ModRank/views/index.jade
+++ b/ModRank/views/index.jade
@@ -4,7 +4,7 @@ block content
     .row
         .col-sm-6(style='margin:auto')
             h1.cover-heading Rimworld ModRank
-            form(method='GET' action='/items')
+            form(method='GET' action='/item')
                 div.form-group
                     label(for='id') Steam Workshop ID: 
                     input#id.form-control(type='text', name='id' required)
@@ -13,5 +13,5 @@ block content
                     .col-sm-8.nopadding
                         button.btn.btn-primary.rounded-0.rounded-left(type='submit', style='width:100%') Search
                     .col-sm-2.nopadding
-                        a(href='/items?id=random', style="width:100%").btn.btn-danger.rounded-0.rounded-right Random
+                        a(href='/item?id=random', style="width:100%").btn.btn-danger.rounded-0.rounded-right Random
             em= 'Search ' + llen + ' total published mods and scenarios!'
