--- a/ModRank/views/layout.jade
+++ b/ModRank/views/layout.jade
@@ -26,7 +26,7 @@ html
                                         a(href='/compare') Compare
                                 li
                                     h5
-                                        a(href='/items?id=random') Random
+                                        a(href='/item?id=random') Random
                                 li
                                     h5
                                         a(href='/compare?id1=random&id2=random') Random Matchup
