- added new favicon - renamed google analytics script to reflect function

--- a/ModRank/views/layout.jade
+++ b/ModRank/views/layout.jade
@@ -6,7 +6,7 @@ html
     link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css')
     link(rel='stylesheet', href='/vendor/Bootstrap/css/bootstrap.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
-    link(rel='icon', href='/images/favicon.jpg')
+    link(rel='icon', href='/images/mr.png')
 
   body
     .site-wrapper
@@ -40,4 +40,4 @@ html
 
     script(src='https://code.jquery.com/jquery-3.2.1.min.js')
     script(src='/vendor/Bootstrap/js/bootstrap.js')
-    script(src='/javascripts/JavaScript.js')
+    script(src='/javascripts/analytics.js')
