--- a/ModRank/views/index.jade
+++ b/ModRank/views/index.jade
@@ -2,7 +2,7 @@ extends layout
 
 block content
     .row
-        .col-sm-6(style='margin:auto')
+        .col-sm-6.margin-auto
             h1.cover-heading Rimworld ModRank
             form(method='GET' action='/item')
                 div.form-group
@@ -15,3 +15,41 @@ block content
                     .col-sm-2.nopadding
                         a(href='/item?id=random', style="width:100%").btn.btn-danger.rounded-0.rounded-right Random
             em= 'Search ' + llen + ' total published mods and scenarios!'
+    ul.list-group
+        li.list-group-item
+            h2 Hall of Famers
+        li.list-group-item.bg-secondary
+            .row
+                .col-md-4 Most Subscribed
+                .col-md-2
+                    img(src=subTop.img alt=subTop.itemTitle)
+                .col-md-4= subTop.itemTitle
+                .col-md-2= subTop.subs
+        li.list-group-item.bg-primary
+            .row
+                .col-md-4 Most Favorited
+                .col-md-2
+                    img(src=subTop.img alt=subTop.itemTitle)
+                .col-md-4= subTop.itemTitle
+                .col-md-2= subTop.favs
+        li.list-group-item.bg-success
+            .row
+                .col-md-4 Most Comments
+                .col-md-2
+                    img(src=subTop.img alt=subTop.itemTitle)
+                .col-md-4= subTop.itemTitle
+                .col-md-2= subTop.comments
+        li.list-group-item.bg-danger
+            .row
+                .col-md-4 Most Viewed
+                .col-md-2
+                    img(src=subTop.img alt=subTop.itemTitle)
+                .col-md-4= subTop.itemTitle
+                .col-md-2= subTop.views
+        li.list-group-item.bg-warning
+            .row
+                .col-md-4 Most Unsubscribed
+                .col-md-2
+                    img(src=subTop.img alt=subTop.itemTitle)
+                .col-md-4= subTop.itemTitle
+                .col-md-2= subTop.unsubscribes
