- added logo - removed unnecessary console.logs

--- a/ModRank/views/layout.jade
+++ b/ModRank/views/layout.jade
@@ -15,7 +15,8 @@ html
                 .masthead
                     .inner
                         a(href='/')
-                            h3.masthead-brand RW-MR
+                            h3.masthead-brand
+                                img(src='/images/mr.png' alt='RW-MR')
                         nav
                             ul.nav.masthead-nav
                                 li
