- added links to homepage items

--- a/ModRank/views/layout.jade
+++ b/ModRank/views/layout.jade
@@ -16,7 +16,7 @@ html
                     .inner
                         a(href='/')
                             h3.masthead-brand
-                                img(src='/images/mr.png' alt='RW-MR')
+                                img(src='/images/mr.png' alt='RW-MR' style='max-height:40px').img-fluid
                         nav
                             ul.nav.masthead-nav
                                 li
