--- a/ModRank/views/index.jade
+++ b/ModRank/views/index.jade
@@ -4,15 +4,14 @@ block content
     .row
         .col-sm-6.margin-auto
             h1.cover-heading Rimworld ModRank
-            form(method='GET' action='/item')
+            form(method='GET' action='/item').margin-auto
                 div.form-group
                     label(for='id') Steam Workshop ID: 
                     input#id.form-control(type='text', name='id' required)
                 .row
-                    .col-sm-1
-                    .col-sm-8.nopadding
+                    .col-sm-9.nopadding
                         button.btn.btn-primary.rounded-0.rounded-left(type='submit', style='width:100%') Search
-                    .col-sm-2.nopadding
+                    .col-sm-3.nopadding
                         a(href='/item?id=random', style="width:100%").btn.btn-danger.rounded-0.rounded-right Random
             em= 'Search ' + llen + ' total published mods and scenarios!'
     .row
@@ -25,123 +24,138 @@ block content
                 li.list-group-item.bg-danger(style='border-bottom:4px solid white')
                     h4 Most Subscribed
                 li.list-group-item.bg-warning
-                    .row
-                        .col-md-2 #1
-                        .col-md-2
-                            img(src=subTop.img alt=subTop.itemTitle).img-fluid
-                        .col-md-6= subTop.itemTitle
-                        .col-md-2= subTop.subs
+                    a(href=('/item?id=' + subTop.id))
+                        .row
+                            .col-md-2 #1
+                            .col-md-2
+                                img(src=subTop.img alt=subTop.itemTitle).img-fluid
+                            .col-md-6= subTop.itemTitle
+                            .col-md-2= subTop.subs
                 li.list-group-item.bg-secondary
-                    .row
-                        .col-md-2 #2
-                        .col-md-2
-                            img(src=subTop2.img alt=subTop2.itemTitle).img-fluid
-                        .col-md-6= subTop2.itemTitle
-                        .col-md-2= subTop2.subs
+                    a(href=('/item?id=' + subTop2.id))
+                        .row
+                            .col-md-2 #2
+                            .col-md-2
+                                img(src=subTop2.img alt=subTop2.itemTitle).img-fluid
+                            .col-md-6= subTop2.itemTitle
+                            .col-md-2= subTop2.subs
                 li.list-group-item.bg-info
-                    .row
-                        .col-md-2 #3
-                        .col-md-2
-                            img(src=subTop3.img alt=subTop3.itemTitle).img-fluid
-                        .col-md-6= subTop3.itemTitle
-                        .col-md-2= subTop3.subs
+                    a(href=('/item?id=' + subTop3.id))
+                        .row
+                            .col-md-2 #3
+                            .col-md-2
+                                img(src=subTop3.img alt=subTop3.itemTitle).img-fluid
+                            .col-md-6= subTop3.itemTitle
+                            .col-md-2= subTop3.subs
         .col-md-6.col-lg-4(style='margin-bottom:30px')
             ul.list-group
                 li.list-group-item.bg-danger(style='border-bottom:4px solid white')
                     h4 Most Favorited
                 li.list-group-item.bg-warning
-                    .row
-                        .col-md-2 #1
-                        .col-md-2
-                            img(src=favTop.img alt=favTop.itemTitle).img-fluid
-                        .col-md-6= favTop.itemTitle
-                        .col-md-2= favTop.favs
+                    a(href=('/item?id=' + favTop.id))
+                        .row
+                            .col-md-2 #1
+                            .col-md-2
+                                img(src=favTop.img alt=favTop.itemTitle).img-fluid
+                            .col-md-6= favTop.itemTitle
+                            .col-md-2= favTop.favs
                 li.list-group-item.bg-secondary
-                    .row
-                        .col-md-2 #2
-                        .col-md-2
-                            img(src=favTop2.img alt=favTop2.itemTitle).img-fluid
-                        .col-md-6= favTop2.itemTitle
-                        .col-md-2= favTop2.favs
+                    a(href=('/item?id=' + favTop2.id))
+                        .row
+                            .col-md-2 #2
+                            .col-md-2
+                                img(src=favTop2.img alt=favTop2.itemTitle).img-fluid
+                            .col-md-6= favTop2.itemTitle
+                            .col-md-2= favTop2.favs
                 li.list-group-item.bg-info
-                    .row
-                        .col-md-2 #3
-                        .col-md-2
-                            img(src=favTop3.img alt=favTop3.itemTitle).img-fluid
-                        .col-md-6= favTop3.itemTitle
-                        .col-md-2= favTop3.favs
+                    a(href=('/item?id=' + favTop3.id))
+                        .row
+                            .col-md-2 #3
+                            .col-md-2
+                                img(src=favTop3.img alt=favTop3.itemTitle).img-fluid
+                            .col-md-6= favTop3.itemTitle
+                            .col-md-2= favTop3.favs
         .col-md-6.col-lg-4(style='margin-bottom:30px')
             ul.list-group
                 li.list-group-item.bg-danger(style='border-bottom:4px solid white')
                     h4 Most Comments
                 li.list-group-item.bg-warning
-                    .row
-                        .col-md-2 #1
-                        .col-md-2
-                            img(src=commentTop.img alt=commentTop.itemTitle).img-fluid
-                        .col-md-6= commentTop.itemTitle
-                        .col-md-2= commentTop.comments
+                    a(href=('/item?id=' + commentTop.id))
+                        .row
+                            .col-md-2 #1
+                            .col-md-2
+                                img(src=commentTop.img alt=commentTop.itemTitle).img-fluid
+                            .col-md-6= commentTop.itemTitle
+                            .col-md-2= commentTop.comments
                 li.list-group-item.bg-secondary
-                    .row
-                        .col-md-2 #2
-                        .col-md-2
-                            img(src=commentTop2.img alt=commentTop2.itemTitle).img-fluid
-                        .col-md-6= commentTop2.itemTitle
-                        .col-md-2= commentTop2.comments
+                    a(href=('/item?id=' + commentTop2.id))
+                        .row
+                            .col-md-2 #2
+                            .col-md-2
+                                img(src=commentTop2.img alt=commentTop2.itemTitle).img-fluid
+                            .col-md-6= commentTop2.itemTitle
+                            .col-md-2= commentTop2.comments
                 li.list-group-item.bg-info
-                    .row
-                        .col-md-2 #3
-                        .col-md-2
-                            img(src=commentTop3.img alt=commentTop3.itemTitle).img-fluid
-                        .col-md-6= commentTop3.itemTitle
-                        .col-md-2= commentTop3.comments
+                    a(href=('/item?id=' + commentTop3.id))
+                        .row
+                            .col-md-2 #3
+                            .col-md-2
+                                img(src=commentTop3.img alt=commentTop3.itemTitle).img-fluid
+                            .col-md-6= commentTop3.itemTitle
+                            .col-md-2= commentTop3.comments
         .col-md-6.col-lg-4(style='margin-bottom:30px')
             ul.list-group
                 li.list-group-item.bg-danger(style='border-bottom:4px solid white')
                     h4 Most Viewed
                 li.list-group-item.bg-warning
-                    .row
-                        .col-md-2 #1
-                        .col-md-2
-                            img(src=viewTop.img alt=viewTop.itemTitle).img-fluid
-                        .col-md-6= viewTop.itemTitle
-                        .col-md-2= viewTop.views
+                    a(href=('/item?id=' + viewTop.id))
+                        .row
+                            .col-md-2 #1
+                            .col-md-2
+                                img(src=viewTop.img alt=viewTop.itemTitle).img-fluid
+                            .col-md-6= viewTop.itemTitle
+                            .col-md-2= viewTop.views
                 li.list-group-item.bg-secondary
-                    .row
-                        .col-md-2 #2
-                        .col-md-2
-                            img(src=viewTop2.img alt=viewTop2.itemTitle).img-fluid
-                        .col-md-6= viewTop2.itemTitle
-                        .col-md-2= viewTop2.views
+                    a(href=('/item?id=' + viewTop2.id))
+                        .row
+                            .col-md-2 #2
+                            .col-md-2
+                                img(src=viewTop2.img alt=viewTop2.itemTitle).img-fluid
+                            .col-md-6= viewTop2.itemTitle
+                            .col-md-2= viewTop2.views
                 li.list-group-item.bg-info
-                    .row
-                        .col-md-2 #3
-                        .col-md-2
-                            img(src=viewTop3.img alt=viewTop3.itemTitle).img-fluid
-                        .col-md-6= viewTop3.itemTitle
-                        .col-md-2= viewTop3.views
+                    a(href=('/item?id=' + viewTop3.id))
+                        .row
+                            .col-md-2 #3
+                            .col-md-2
+                                img(src=viewTop3.img alt=viewTop3.itemTitle).img-fluid
+                            .col-md-6= viewTop3.itemTitle
+                            .col-md-2= viewTop3.views
         .col-md-6.col-lg-4(style='margin-bottom:30px')
             ul.list-group
                 li.list-group-item.bg-danger(style='border-bottom:4px solid white')
                     h4 Most Unsubscribed
                 li.list-group-item.bg-warning
-                    .row
-                        .col-md-2 #1
-                        .col-md-2
-                            img(src=unsubTop.img alt=unsubTop.itemTitle).img-fluid
-                        .col-md-6= unsubTop.itemTitle
-                        .col-md-2= unsubTop.unsubs
+                    a(href=('/item?id=' + unsubTop.id))
+                        .row
+                            .col-md-2 #1
+                            .col-md-2
+                                img(src=unsubTop.img alt=unsubTop.itemTitle).img-fluid
+                            .col-md-6= unsubTop.itemTitle
+                            .col-md-2= unsubTop.unsubs
                 li.list-group-item.bg-secondary
-                    .row
-                        .col-md-2 #2
-                        .col-md-2
-                            img(src=unsubTop2.img alt=unsubTop2.itemTitle).img-fluid
-                        .col-md-6= unsubTop2.itemTitle
-                        .col-md-2= unsubTop2.unsubs
+                    a(href=('/item?id=' + unsubTop2.id))
+                        .row
+                            .col-md-2 #2
+                            .col-md-2
+                                img(src=unsubTop2.img alt=unsubTop2.itemTitle).img-fluid
+                            .col-md-6= unsubTop2.itemTitle
+                            .col-md-2= unsubTop2.unsubs
                 li.list-group-item.bg-info
-                    .row
-                        .col-md-2 #3
-                        .col-md-2
-                            img(src=unsubTop3.img alt=unsubTop3.itemTitle).img-fluid
-                        .col-md-6= unsubTop3.itemTitle
-                        .col-md-2= unsubTop3.unsubs
+                    a(href=('/item?id=' + unsubTop3.id))
+                        .row
+                            .col-md-2 #3
+                            .col-md-2
+                                img(src=unsubTop3.img alt=unsubTop3.itemTitle).img-fluid
+                            .col-md-6= unsubTop3.itemTitle
+                            .col-md-2= unsubTop3.unsubs
